crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__doctype_without_space_before_name.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<!DOCTYPEhtml>\"####)"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "!DOCTYPEhtml": None,
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
