crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__empty_end_tag_with_following_characters.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r#\"a</>bc\"#)"
---
[
    Token {
        data: "a",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "</>bc",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
