crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__entity_plus_newline.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"\nx\n&gt;\n\"####)"
---
[
    Token {
        data: "\nx\n",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: ">",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "\n",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
