crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__hexadecimal_entity_pair_representing_a_surrogate_pair.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r#\"&#xD869;&#xDED6;\"#)"
---
[
    Token {
        data: "�",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "�",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
