crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__hexadecimal_entity_representing_a_codepoint_after_1114111_uplus_10ffff.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r#\"&#x1010FFFF;\"#)"
---
[
    Token {
        data: "�",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
