crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__hexadecimal_entity_representing_the_nul_character.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r#\"&#x0000;\"#)"
---
[
    Token {
        data: "�",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
